Adding omap_gpu drm display driver
A DSS based DRM display driver, which provides a plugin interface for
3d/2d accelerators to register. The core driver handles construction
of CRTC/encoder/connectors to represent the hardware, and support KMS.
This driver replaces omapfb. omap_gpu drm driver allocates framebuffer
memory and implements (with the help of drm_fb_helper) the legacy fbdev
interface.

The driver maps CRTCs to overlays, encoders to overlay-managers, and
connectors to dssdev's.

To set vram on the command-line (bootargs):

  omapgpu.vram=0:32M

(same syntax as omapfb but use omapgpu module name instead)

To set default resolution on command-line, use the normal video= line,
such as:

  video="HDMI Type A-1:800x600@60"

And of course, to enable debug:

  drm.debug=7

The omap_gpu drm driver supports using platform_data to configure which
omap_gpu devices are assigned which overlays/managers/devices.  If
multiple devices are registered, each one creates it's own framebuffer
and fbdev. This allows for multiple independent display contexts (like
with the old omapfb driver) in cases where you don't want to share one
virtual framebuffer across multiple displays.

Signed-off-by: Rob Clark <rob@ti.com>
Signed-off-by: Ricardo Salveti de Araujo <ricardo.salveti@canonical.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -165,3 +165,27 @@ config DRM_SAVAGE
 	help
 	  Choose this option if you have a Savage3D/4/SuperSavage/Pro/Twister
 	  chipset. If M is selected the module will be called savage.
+
+config DRM_OMAP
+	tristate "OMAP GPU (EXPERIMENTAL)"
+	depends on DRM && !CONFIG_FB_OMAP2
+	select DRM_KMS_HELPER
+	select OMAP2_VRAM
+	select OMAP2_DSS
+	select FB_SYS_FILLRECT
+	select FB_SYS_COPYAREA
+	select FB_SYS_IMAGEBLIT
+	select FB_SYS_FOPS
+	default y
+	help
+	  DRM display driver for OMAP2/3/4 based boards.
+
+config DRM_OMAP_NUM_CRTCS
+	int "Number of CRTCs"
+	range 1 10
+	default 1  if ARCH_OMAP2 || ARCH_OMAP3
+	default 2  if ARCH_OMAP4
+	depends on DRM_OMAP
+	help
+	  Select the number of video overlays which can be used as framebuffers.
+	  The remaining overlays are reserved for video.
